--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Fix corrupted turkish characters" />
+		<meta name="description" content="fix corrupted tr chars" />
 
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
